--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,32 +1,38 @@
-name: ci 
+name: ci
 on:
   push:
-    branches:
-      - master 
-      - main
+    branches: [ master, main ]
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Configure Git Credentials
+
+      - name: Configure Git
         run: |
-          git config user.name github-actions[bot]
-          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: ~/.cache 
-          restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material 
-      - run: mkdocs gh-deploy --force
+          python-version: '3.x'
+          cache: 'pip'
+          cache-dependency-path: requirements.txt
+
+      - name: Install Python deps
+        run: pip install -r requirements.txt
+
+      # Optional: build first so failures stop before pushing to gh-pages
+      - name: Build (strict)
+        run: mkdocs build --strict
+        env:
+          MATHJAX_URL: https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
+
+      - name: Deploy to GitHub Pages
+        run: mkdocs gh-deploy --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MATHJAX_URL: https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
