--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ mkdocs-macros-plugin
 mkdocs-minify-plugin
 mkdocs-git-revision-date-localized-plugin
 mkdocs-glightbox
+pymdown-extensions
+material-extensions
